--- a/CSS/mymain.css
+++ b/CSS/mymain.css
@@ -21,7 +21,7 @@ p{
     font-size: 15px;
     font-weight: bold;
     text-decoration: underline;
-    font-style: italic;`
+    font-style: italic;
 }
 
 h1 {
