added the css class

--- a/CSS/mymain.css
+++ b/CSS/mymain.css
@@ -1,7 +1,7 @@
-* {
+/* * {
     /* //background-color: pink; */
     
-}
+ */
     /* learned the display property in CSS */
 /* div{
     background-color: rgb(202, 255, 124);
