adding the new commit

--- a/CSS/mymain.css
+++ b/CSS/mymain.css
@@ -16,7 +16,7 @@ span
     display: block;
 } */
 
-.my1
+/* .my1
 {
     background-color: green;
 }
@@ -51,7 +51,7 @@ body{
     /* background-image: url('../images/flower.jpg');
     background-repeat: no-repeat;
     background-size:cover;
-    background-position: center; */
+    background-position: center; 
 }
 
 #M1{
@@ -72,7 +72,7 @@ body{
     background-color: tomato;
     top:145px;
     left: 150px;
-}
+} */
 
 
 
