--- a/CSS/mymain.css
+++ b/CSS/mymain.css
@@ -1,83 +1,20 @@
-/* * {
-    /* //background-color: pink; */
-    
- */
-    /* learned the display property in CSS */
-/* div{
-    background-color: rgb(202, 255, 124);
-    height: 400px;
-    display: block;
+
+
+
+
+div{
+    background-color: hsl(0, 100%, 75%);
+    width: 100px;
+    height: 100px;
+    display: inline-block;
 }
 span
 {
-    background-color: rgb(202, 255, 124);
-    height: 540px;
-    
-    display: block;
-} */
-
-/* .my1
-{
-    background-color: green;
-}
-
-.my2{
-    background-color: blue;
-    margin-top: 50px;
-    margin-left: 50px;
-    margin-right: 50px;
-    margin-left: 70px;
-    height: 250px;
-    width: 250px;
-    border: rgb(255, 73, 41) solid;
-}
-
-p{
-    font-family:'Courier New', Courier, monospace,sans-serif;
-    font-size: 15px;
-    font-weight: bold;
-    text-decoration: underline;
-    font-style: italic;
-}
-
-h1 {
-    font-family:"Bevan";   
-    border-style: dashed;
-    border-color: hsl(271, 100%, 60%);
-}
-
-body{
-    /* background-color: rgb(255, 255, 36); */
-    /* background-image: url('../images/flower.jpg');
-    background-repeat: no-repeat;
-    background-size:cover;
-    background-position: center; 
-}
-
-#M1{
-    border: 1PX solid;
-    background-color: skyblue;
-    height: 300px;
-    width: 300px;
-    position: relative;
-    right: 50px;
-    top: 20px;
-    left: 200px;
-}
-
-#M2{
-    border: 1px solid;
-    height: 100px;
+    background-color: yellow;
     width: 100px;
-    background-color: tomato;
-    top:145px;
-    left: 150px;
-} */
-
-
-
-
-
+    height: 100px;
+    display: inline-block;
+}
 
 
 
