Added the flex in code

--- a/CSS/mymain.css
+++ b/CSS/mymain.css
@@ -1,25 +1,38 @@
-
-
-
-
-div{
-    background-color: hsl(0, 100%, 75%);
-    width: 100px;
-    height: 100px;
-    display: inline-block;
-}
-span
+.container
 {
-    background-color: yellow;
-    width: 100px;
-    height: 100px;
-    display: inline-block;
+    display: flex;
+    flex-direction: row-reverse;
 }
 
 
 
+.box
+{
+    font-size: 8em;
+    height: 150px;
 
+    width: 150px;
+    height: 150px;
+}
 
+#box1
+{
+    background-color: hsl(0, 100%, 70%);
+}
+
+#box2
+{
+    background-color: hsl(52, 100%, 70%);
+}
+
+#box3
+{
+    background-color: hsl(77, 100%, 70%);
+}
+#box4
+{
+    background-color: hsl(210, 100%, 70%);
+}
 
 
 
