lerned all the flex box stuff

--- a/CSS/mymain.css
+++ b/CSS/mymain.css
@@ -5,6 +5,7 @@
     /* height: 90 px; */
     align-items: flex-end;
     flex-wrap: wrap;
+    align-content: flex-start;
     /* flex-direction: row-reverse; */
     /* justify-content:space-evenly; */
 }
